--- a/index.html
+++ b/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
     <title>Good Quiz</title>
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
 
-  <button id="startbutton">Start game!</button>
+  <button id="startbutton">Start the quiz!</button>
 
   <section>
     <h2 id="h2"></h2>
   </section>
+
+  <div id="answers"></div>
+
+  <!--</div>-->
+  <!--<div class="card">-->
+    <!--<h3>Card 2</h3>-->
+    <!--<p>Some text</p>-->
+  <!--</div>-->
 
   </body>
 
