--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
 
   <button id="startbutton">Start the quiz!</button>
 
-  <section>
-    <h2 id="h2"></h2>
+  <header>
+  <h2 id="h2"></h2>
+  </header>
+
+
+  <section id="answers">
+      <div ><button class="answer" id="answer1"></button> </div>
+      <div ><button class="answer" id="answer2"></button> </div>
+      <div ><button class="answer" id="answer3"></button> </div>
+      <div ><button id="answer4" class="answer"></button> </div>
+
   </section>
-
-  <div id="answers"></div>
-
-  <!--</div>-->
-  <!--<div class="card">-->
-    <!--<h3>Card 2</h3>-->
-    <!--<p>Some text</p>-->
-  <!--</div>-->
 
   </body>
 
