--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div ><button class="answer" id="answer1"></button> </div>
       <div ><button class="answer" id="answer2"></button> </div>
       <div ><button class="answer" id="answer3"></button> </div>
-      <div ><button id="answer4" class="answer"></button> </div>
+      <div ><button class="answer" id="answer4"></button> </div>
 
   </section>
 
