Added selectors for level and amount of questions. Works ok

--- a/index.html
+++ b/index.html
@@ -10,9 +10,22 @@
   <button id="startbutton">Start the quiz!</button>
 
   <header>
-  <h2 id="h2"></h2>
   </header>
 
+  <select id="numberOfQuestions">
+      <option value="0">-</option>;
+      <option value="10">10</option>;
+      <option value="15">15</option>;
+      <option value="20">20</option>;
+      <option value="30">30</option>;
+  </select>
+
+  <select id="level">
+      <option value="">-</option>;
+      <option value="easy">Easy</option>;
+      <option value="medium">Medium</option>;
+      <option value="hard">Hard</option>;
+  </select>
 
   <section id="answers">
       <div ><button class="answer" id="answer1"></button> </div>
