--- a/index.html
+++ b/index.html
@@ -28,12 +28,9 @@
   </select>
 
   <section id="answers">
-      <div ><button class="answer" id="answer1"></button> </div>
-      <div ><button class="answer" id="answer2"></button> </div>
-      <div ><button class="answer" id="answer3"></button> </div>
-      <div ><button class="answer" id="answer4"></button> </div>
-
   </section>
+
+  <progress max="100" value="80"></progress>
 
   </body>
 
