More styling and added a progress bar - not connected yet

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 
   <section id="answers">
   </section>
-
-  <progress max="100" value="80"></progress>
+<footer>
+    <progress max="100" value="20"></progress>
+</footer>
 
   </body>
 
