Fixed the progress bar.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <section id="answers">
   </section>
 <footer>
-    <progress max="100" value="20"></progress>
+    <progress max="" value="1"></progress>
 </footer>
 
   </body>
