--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
     <title>Good Quiz</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style3.css">
   </head>
   <body>
 
@@ -35,7 +35,7 @@
 
   </body>
 
-<script type="text/javascript" src="script.js"> 
+<script type="text/javascript" src="script.js">
 </script>
 
 </html>
