Commented and cleaned code, added starting value in the selectors

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </header>
 
   <select id="numberOfQuestions">
-      <option value="0">-</option>;
+      <option value="">Questions</option>;
       <option value="10">10</option>;
       <option value="15">15</option>;
       <option value="20">20</option>;
@@ -21,7 +21,7 @@
   </select>
 
   <select id="level">
-      <option value="">-</option>;
+      <option value="">Level</option>;
       <option value="easy">Easy</option>;
       <option value="medium">Medium</option>;
       <option value="hard">Hard</option>;
