--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 
-  <button id="startbutton">Start the quiz!</button>
+  <button id="startbutton">Start!</button>
 
   <header>
   </header>
